--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "pics",
   "version": "0.1.0",
+  "homepage" : "/projets/react/pics/",
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
